--- a/public/index.html
+++ b/public/index.html
@@ -3,6 +3,7 @@
   <head>
     <title>Youtube Search</title>
     <meta charset="utf-8"></meta>
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="stylesheet" href="stylesheets/style.css"></link>
     <link rel="stylesheet" href="vendor/SLDS092/assets/styles/salesforce-lightning-design-system.min.css"></link>
     <script src="vendor/jquery/dist/jquery.min.js"></script>
