--- a/public/index.html
+++ b/public/index.html
@@ -9,12 +9,13 @@
     <script src="vendor/jquery/dist/jquery.min.js"></script>
     <script src="vendor/angular/angular.min.js"></script>
     <script src="vendor/angular-route/angular-route.js"></script>
-    <script src="javascripts/app.js"></script>
-    <script src="javascripts/controllers.js"></script>
   </head>
   <body ng-app="Youtube">
     <div class="slds">
       <div ng-view></div>
     </div>
+    <!-- javascript -->
+    <script src="javascripts/app.js"></script>
+    <script src="javascripts/controllers.js"></script>
   </body>
 </html>
